test_suite/tests/ui/remote/bad_getter.stderr
error: failed to parse path: "~~~"
  --> $DIR/bad_getter.rs:13:22
   |
13 |     #[serde(getter = "~~~")]
   |                      ^^^^^

error: aborting due to previous error

